bugfix: messge not centred over board - FIXED

--- a/client/src/components/guessContainer.css
+++ b/client/src/components/guessContainer.css
@@ -26,6 +26,7 @@
 
 .message {
   display: flex;
+  justify-content: center;
 }
 @keyframes flipping {
   0% {
